--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,11 @@
     "cmdk": "^1.0.0",
     "connectkit": "^1.8.2",
     "lucide-react": "^0.454.0",
-    "next": "15.0.0",
+    "next": "^15.1.3",
     "next-auth": "^4.24.10",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.44",
